--- a/last/index.html
+++ b/last/index.html
@@ -9,7 +9,7 @@
 	<header>
 		<div>
 			<ul class="header-list">
-				<li class="header-list-item"><img id="pan" src="C:\Users\さやか\Desktop\卒業制作\img\441685_png_wi\441685.png">Bakery niji-pan</li>
+				<li class="header-list-item"><img id="pan" src="img/441685_png_wi/441685.png">Bakery niji-pan</li>
 				<li class="header-list-item"><a href="#top-wrapper">TOP</a></li>
 				<li class="header-list-item"><a href="#concept">ABOUT US</a></li>
 				<li class="header-list-item" id="item"><a href="item.html">ITEM</a></li>
@@ -53,7 +53,7 @@
 						<dd>
 							<h5>"焼き菓子の販売始めます！！"<em>new</em></h5>
 							<p>
-								<img class="news" src="C:\Users\さやか\Desktop\卒業制作\img\266710_s_wi\db81617c88d2460f001b741c195929e9_s.jpg">
+								<img class="news" src="img/266710_s_wi/db81617c88d2460f001b741c195929e9_s.jpg">
 								<br>
 								<br>
 								パン同様素材の持ち味、風味を生かした焼き菓子の販売を始めます。<br>
@@ -65,7 +65,7 @@
 						<dd>
 							<h5>"クロワッサン・ショコラ"<span class="season">季節商品</span></h5>
 							<p>
-								<img class="news" src="C:\Users\さやか\Desktop\卒業制作\img\0893b945c2a1a66e1e6787d814a394b2_m.jpg">
+								<img class="news" src="img/topimg.jpg">
 								<br>
 								<br>
 								濃い目のコーヒー、ホットミルクにぴったりのベルギー産チョコレートを包んだクロワッサン・ショコラ
@@ -112,7 +112,7 @@
 
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.8413525865535!2d139.59140361488645!3d35.68090818019437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f1e602b479d9%3A0x8e892712891c5112!2z44CSMTU3LTAwNjEg5p2x5Lqs6YO95LiW55Sw6LC35Yy65YyX54OP5bGx77yV5LiB55uu77yR77yW4oiS77yS77yV!5e0!3m2!1sja!2sjp!4v1490019747765" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 						<div class="shoping-box">
-							<img class="shopimg" src="C:\Users\さやか\Desktop\卒業制作\img\181445_s_wi\450e4db04fd0a279c25f65f5853f6f79_s.jpg">
+							<img class="shopimg" src="img/181445_s_wi/450e4db04fd0a279c25f65f5853f6f79_s.jpg">
 						</div>
 					</div>
 					
