--- a/last/item.html
+++ b/last/item.html
@@ -25,7 +25,7 @@
 	<header>
 		<div>
 			<ul class="header-list">
-				<li class="header-list-item"><img id="pan" src="C:\Users\さやか\Desktop\卒業制作\img\441685_png_wi\441685.png">Bakery niji-pan</li>
+				<li class="header-list-item"><img id="pan" src="img/441685_png_wi/441685.png">Bakery niji-pan</li>
 				<li class="header-list-item"><a href="#top-wrapper">TOP</a></li>
 				<li class="header-list-item"><a href="#concept">ABOUT US</a></li>
 				<li class="header-list-item" id="item"><a href="item.html">ITEM</a></li>
@@ -43,14 +43,14 @@
 				<h3 class="contents-title">商品紹介</h3>
 				<div class="item-container">
 					<ul class="items clearfix bxslider">
-						<li><img src="C:\Users\さやか\Desktop\卒業制作\img\246706_s_wi\4ff5c54bb8941fd0245f4a4acf36d938_s.jpg" title="各種サンド"></li>						
-						<li><img src="C:\Users\さやか\Desktop\卒業制作\img\680928_m_wi\2f3b6ee764d792a29229cf0c37421f4c_m.jpg" title="ホテルブレッド"></li>
-						<li><img src="C:\Users\さやか\Desktop\卒業制作\img\560476_s_wi\8a453596e239e46a681c22f03fc939fb_s.jpg" title="カンパーニュ"></li>
-        				<li><img src="C:\Users\さやか\Desktop\卒業制作\img\266710_s_wi\db81617c88d2460f001b741c195929e9_s.jpg" title="Baked Sweets"></li>
-						<li><img src="C:\Users\さやか\Desktop\卒業制作\img\448611_s_wi\f8c9b32e75f87e38175fde13dba4acee_s.jpg" title="バゲット"></li>
-						<li><img src="C:\Users\さやか\Desktop\卒業制作\img\163858_s_wi\e574329da5e27be9f7fe7e35fc35408d_s.jpg" title="クロワッサン"></li>
-						<li><img src="C:\Users\さやか\Desktop\卒業制作\img\89461_s_wi\776c80793fbbf01c82fc2253977e5436_s.jpg" title="メロンパン"></li>
-						<li><img src="C:\Users\さやか\Desktop\卒業制作\img\295141_s_wi\9197cf471b827cd82675d665faf4f675_s.jpg" title="かのこ"></li>
+						<li><img src="img/246706_s_wi/4ff5c54bb8941fd0245f4a4acf36d938_s.jpg" title="各種サンド"></li>						
+						<li><img src="img/680928_m_wi/top.jpg" title="ホテルブレッド"></li>
+						<li><img src="img/560476_s_wi/8a453596e239e46a681c22f03fc939fb_s.jpg" title="カンパーニュ"></li>
+        				<li><img src="img/266710_s_wi/db81617c88d2460f001b741c195929e9_s.jpg" title="Baked Sweets"></li>
+						<li><img src="img/448611_s_wi/f8c9b32e75f87e38175fde13dba4acee_s.jpg" title="バゲット"></li>
+						<li><img src="img/163858_s_wi/e574329da5e27be9f7fe7e35fc35408d_s.jpg" title="クロワッサン"></li>
+						<li><img src="img/89461_s_wi/776c80793fbbf01c82fc2253977e5436_s.jpg" title="メロンパン"></li>
+						<li><img src="img/295141_s_wi/9197cf471b827cd82675d665faf4f675_s.jpg" title="かのこ"></li>
 					</ul>
 				</div>
 				</div>
