--- a/last/index.html
+++ b/last/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="C:/Users/さやか/Desktop/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Oldenburg" rel="stylesheet">
+	<meta name="view port" content="width=device-width,initial-scale=1">
+</head>
+<body>
 	<header>
 		<div>
 			<ul class="header-list">
@@ -110,7 +113,7 @@
 					</p>
 					<div class="map">
 
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.8413525865535!2d139.59140361488645!3d35.68090818019437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f1e602b479d9%3A0x8e892712891c5112!2z44CSMTU3LTAwNjEg5p2x5Lqs6YO95LiW55Sw6LC35Yy65YyX54OP5bGx77yV5LiB55uu77yR77yW4oiS77yS77yV!5e0!3m2!1sja!2sjp!4v1490019747765" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3240.8413525865535!2d139.59140361488645!3d35.68090818019437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018f1e602b479d9%3A0x8e892712891c5112!2z44CSMTU3LTAwNjEg5p2x5Lqs6YO95LiW55Sw6LC35Yy65YyX54OP5bGx77yV5LiB55uu77yR77yW4oiS77yS77yV!5e0!3m2!1sja!2sjp!4v1490019747765" width="500" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 						<div class="shoping-box">
 							<img class="shopimg" src="img/181445_s_wi/450e4db04fd0a279c25f65f5853f6f79_s.jpg">
 						</div>
